--- a/coach-coach/package.json
+++ b/coach-coach/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.8",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
+    "vue-confetti-explosion": "^1.0.2",
     "vue-router": "^4.0.3",
     "vue3-datepicker": "^0.4.0",
     "vuex": "^4.0.0"
