--- a/coach-coach/Dockerfile
+++ b/coach-coach/Dockerfile
@@ -11,5 +11,8 @@ RUN npm run build
 # 프로덕션 스테이지
 FROM nginx
 COPY --from=build-stage /app/dist /usr/share/nginx/html
+# Nginx 설정 파일을 이미지에 복사
+COPY default.conf /etc/nginx/conf.d/default.conf
+
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
