--- a/coach-coach/default.conf
+++ b/coach-coach/default.conf
@@ -6,7 +6,7 @@ server {
     location / {
         root /usr/share/nginx/html;
         index index.html index.htm;
-        add_header Content-Security-Policy "default-src 'self'; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' http://52.78.112.2:5601;";
+        add_header Content-Security-Policy "default-src *;";
         try_files $uri $uri/ /index.html;
     }
     
