--- a/coach-coach/default.conf
+++ b/coach-coach/default.conf
@@ -1,13 +1,12 @@
 server {
-    listen 80;
+    listen       80;
     listen  [::]:80;
-    server_name localhost;
-
+    server_name  localhost;
+    
     location / {
-        root /usr/share/nginx/html;
-        index index.html index.htm;
-        add_header Content-Security-Policy "default-src *;";
-        try_files $uri $uri/ /index.html;
+        root   /usr/share/nginx/html;
+        index  index.html index.htm;
+        add_header Content-Security-Policy "frame-ancestors 'self' http://52.78.112.2:5601;";
     }
     
     error_page   500 502 503 504  /50x.html;
