--- a/coach-coach/default.conf
+++ b/coach-coach/default.conf
@@ -6,7 +6,7 @@ server {
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
-        add_header Content-Security-Policy "frame-ancestors 'self' http://52.78.112.2:5601;";
+        add_header Content-Security-Policy "frame-ancestors 'self' http://52.78.112.2:5601; script-src 'self' 'unsafe-inline';";
     }
     
     error_page   500 502 503 504  /50x.html;
