[Fix] CSP 정책 수정

--- a/coach-coach/default.conf
+++ b/coach-coach/default.conf
@@ -6,7 +6,9 @@ server {
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
-        add_header Content-Security-Policy "frame-ancestors 'self' http://52.78.112.2:5601; script-src 'self' 'unsafe-inline';";
+        # 'unsafe-inline'을 script-src에 추가하여 인라인 스크립트 허용
+        # frame-ancestors 지시어를 통해 프레임을 포함할 수 있는 출처 설정
+        add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; frame-ancestors 'self' http://52.78.112.2:5601;";
     }
     
     error_page   500 502 503 504  /50x.html;
