[Fix] CSP 정책 수정

--- a/coach-coach/default.conf
+++ b/coach-coach/default.conf
@@ -8,7 +8,8 @@ server {
         index  index.html index.htm;
         # 'unsafe-inline'을 script-src에 추가하여 인라인 스크립트 허용
         # frame-ancestors 지시어를 통해 프레임을 포함할 수 있는 출처 설정
-        add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; frame-ancestors 'self' http://52.78.112.2:5601;";
+        # connect-src을 추가하여 외부 API 연결 허용
+        add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; frame-ancestors 'self' http://52.78.112.2:5601; connect-src 'self' http://3.39.168.72:8080;";
     }
     
     error_page   500 502 503 504  /50x.html;
