--- a/coach-coach/default.conf
+++ b/coach-coach/default.conf
@@ -15,6 +15,7 @@ server {
             style-src 'self' 'unsafe-inline'; 
             img-src 'self' https://ifh.cc; 
             connect-src 'self' http://3.39.168.72:8080;
+            frame-src 'self' http://52.78.112.2:5601;
             frame-ancestors 'self' http://52.78.112.2:5601;";
     }
     
